Desarrollo de templates

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -35,6 +35,17 @@
           "height": 25,
           "width": 25
         },
+        "85581399": {
+          "id": "85581399",
+          "path": "related-posts.php",
+          "output": "related-posts.php",
+          "name": "related-posts.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
         "94827002": {
           "id": "94827002",
           "path": "images/controls.png",
@@ -361,17 +372,6 @@
           "parents": [],
           "type": "php"
         },
-        "3034a84f": {
-          "id": "3034a84f",
-          "path": "footer-longform.php",
-          "output": "footer-longform.php",
-          "name": "footer-longform.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "70d0e0e7": {
           "id": "70d0e0e7",
           "path": "images/_image7.jpg",
@@ -517,17 +517,6 @@
           "optimized": false,
           "height": 459,
           "width": 1024
-        },
-        "4e6630bd": {
-          "id": "4e6630bd",
-          "path": "header-longform-video.php",
-          "output": "header-longform-video.php",
-          "name": "header-longform-video.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
         },
         "2346493b": {
           "id": "2346493b",
@@ -681,6 +670,39 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "f809fe70": {
+          "id": "f809fe70",
+          "path": "head.php",
+          "output": "head.php",
+          "name": "head.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "4e6630bd": {
+          "id": "4e6630bd",
+          "path": "header-longform-video.php",
+          "output": "header-longform-video.php",
+          "name": "header-longform-video.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "fe52e22f": {
+          "id": "fe52e22f",
+          "path": "related-posts-multimedia.php",
+          "output": "related-posts-multimedia.php",
+          "name": "related-posts-multimedia.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
