Actualización de desarrollo

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,19 +9,6 @@
       "name": "porven",
       "path": "",
       "files": {
-        "29229216": {
-          "id": "29229216",
-          "path": "images/_image.jpg",
-          "output": "images/_image.jpg",
-          "name": "_image.jpg",
-          "category": "IMAGE",
-          "size": 92124,
-          "type": "jpg",
-          "initialSize": 92124,
-          "optimized": false,
-          "height": 440,
-          "width": 737
-        },
         "61053698": {
           "id": "61053698",
           "path": "images/icon-porven.png",
@@ -99,19 +86,6 @@
           "parents": [],
           "type": "sass"
         },
-        "8a6a86c2": {
-          "id": "8a6a86c2",
-          "path": "images/ad.jpg",
-          "output": "images/ad.jpg",
-          "name": "ad.jpg",
-          "category": "IMAGE",
-          "size": 29392,
-          "type": "jpg",
-          "initialSize": 29392,
-          "optimized": false,
-          "height": 600,
-          "width": 300
-        },
         "37d01b1f": {
           "id": "37d01b1f",
           "path": "images/bg-header.png",
@@ -146,32 +120,6 @@
           "imported": false,
           "parents": [],
           "type": "php"
-        },
-        "057ad679": {
-          "id": "057ad679",
-          "path": "images/ad2.jpg",
-          "output": "images/ad2.jpg",
-          "name": "ad2.jpg",
-          "category": "IMAGE",
-          "size": 23897,
-          "type": "jpg",
-          "initialSize": 23897,
-          "optimized": false,
-          "height": 250,
-          "width": 300
-        },
-        "9f912a53": {
-          "id": "9f912a53",
-          "path": "images/avatar.jpg",
-          "output": "images/avatar.jpg",
-          "name": "avatar.jpg",
-          "category": "IMAGE",
-          "size": 2656,
-          "type": "jpg",
-          "initialSize": 2656,
-          "optimized": false,
-          "height": 52,
-          "width": 50
         },
         "1e716fec": {
           "id": "1e716fec",
@@ -245,19 +193,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "b2dcab94": {
-          "id": "b2dcab94",
-          "path": "images/_image4.jpg",
-          "output": "images/_image4.jpg",
-          "name": "_image4.jpg",
-          "category": "IMAGE",
-          "size": 21044,
-          "type": "jpg",
-          "initialSize": 21044,
-          "optimized": false,
-          "height": 170,
-          "width": 299
-        },
         "cc77316e": {
           "id": "cc77316e",
           "path": "sidebar.php",
@@ -268,32 +203,6 @@
           "imported": false,
           "parents": [],
           "type": "php"
-        },
-        "baa5ddbb": {
-          "id": "baa5ddbb",
-          "path": "images/_image5.jpg",
-          "output": "images/_image5.jpg",
-          "name": "_image5.jpg",
-          "category": "IMAGE",
-          "size": 17959,
-          "type": "jpg",
-          "initialSize": 17959,
-          "optimized": false,
-          "height": 170,
-          "width": 299
-        },
-        "14ba8e9b": {
-          "id": "14ba8e9b",
-          "path": "images/_image6.jpg",
-          "output": "images/_image6.jpg",
-          "name": "_image6.jpg",
-          "category": "IMAGE",
-          "size": 142002,
-          "type": "jpg",
-          "initialSize": 142002,
-          "optimized": false,
-          "height": 400,
-          "width": 1201
         },
         "7afdc0d3": {
           "id": "7afdc0d3",
@@ -372,19 +281,6 @@
           "parents": [],
           "type": "php"
         },
-        "70d0e0e7": {
-          "id": "70d0e0e7",
-          "path": "images/_image7.jpg",
-          "output": "images/_image7.jpg",
-          "name": "_image7.jpg",
-          "category": "IMAGE",
-          "size": 148739,
-          "type": "jpg",
-          "initialSize": 148739,
-          "optimized": false,
-          "height": 800,
-          "width": 1200
-        },
         "50de5972": {
           "id": "50de5972",
           "path": "css/base.css",
@@ -400,123 +296,6 @@
           "imported": false,
           "parents": [],
           "type": "css"
-        },
-        "3d4187f1": {
-          "id": "3d4187f1",
-          "path": "images/_image2.jpg",
-          "output": "images/_image2.jpg",
-          "name": "_image2.jpg",
-          "category": "IMAGE",
-          "size": 28086,
-          "type": "jpg",
-          "initialSize": 28086,
-          "optimized": false,
-          "height": 219,
-          "width": 340
-        },
-        "b8faf257": {
-          "id": "b8faf257",
-          "path": "images/_image3.jpg",
-          "output": "images/_image3.jpg",
-          "name": "_image3.jpg",
-          "category": "IMAGE",
-          "size": 89724,
-          "type": "jpg",
-          "initialSize": 89724,
-          "optimized": false,
-          "height": 600,
-          "width": 1020
-        },
-        "18db09cf": {
-          "id": "18db09cf",
-          "path": "images/456326526-1024x682.jpg",
-          "output": "images/456326526-1024x682.jpg",
-          "name": "456326526-1024x682.jpg",
-          "category": "IMAGE",
-          "size": 209102,
-          "type": "jpg",
-          "initialSize": 209102,
-          "optimized": false,
-          "height": 682,
-          "width": 1024
-        },
-        "94a3571d": {
-          "id": "94a3571d",
-          "path": "images/456326526-300x200.jpg",
-          "output": "images/456326526-300x200.jpg",
-          "name": "456326526-300x200.jpg",
-          "category": "IMAGE",
-          "size": 29662,
-          "type": "jpg",
-          "initialSize": 29662,
-          "optimized": false,
-          "height": 200,
-          "width": 300
-        },
-        "93a02d9a": {
-          "id": "93a02d9a",
-          "path": "images/1024x574.jpg",
-          "output": "images/1024x574.jpg",
-          "name": "1024x574.jpg",
-          "category": "IMAGE",
-          "size": 139739,
-          "type": "jpg",
-          "initialSize": 139739,
-          "optimized": false,
-          "height": 574,
-          "width": 1280
-        },
-        "3332eda6": {
-          "id": "3332eda6",
-          "path": "images/1280x700.jpg",
-          "output": "images/1280x700.jpg",
-          "name": "1280x700.jpg",
-          "category": "IMAGE",
-          "size": 99145,
-          "type": "jpg",
-          "initialSize": 99145,
-          "optimized": false,
-          "height": 700,
-          "width": 1280
-        },
-        "619c2fa4": {
-          "id": "619c2fa4",
-          "path": "images/1280x574.jpg",
-          "output": "images/1280x574.jpg",
-          "name": "1280x574.jpg",
-          "category": "IMAGE",
-          "size": 139739,
-          "type": "jpg",
-          "initialSize": 139739,
-          "optimized": false,
-          "height": 574,
-          "width": 1280
-        },
-        "2711ab8c": {
-          "id": "2711ab8c",
-          "path": "images/300x200.jpg",
-          "output": "images/300x200.jpg",
-          "name": "300x200.jpg",
-          "category": "IMAGE",
-          "size": 15150,
-          "type": "jpg",
-          "initialSize": 15150,
-          "optimized": false,
-          "height": 135,
-          "width": 300
-        },
-        "c117858a": {
-          "id": "c117858a",
-          "path": "images/1024x459.jpg",
-          "output": "images/1024x459.jpg",
-          "name": "1024x459.jpg",
-          "category": "IMAGE",
-          "size": 104169,
-          "type": "jpg",
-          "initialSize": 104169,
-          "optimized": false,
-          "height": 459,
-          "width": 1024
         },
         "2346493b": {
           "id": "2346493b",
@@ -682,17 +461,6 @@
           "parents": [],
           "type": "php"
         },
-        "4e6630bd": {
-          "id": "4e6630bd",
-          "path": "header-longform-video.php",
-          "output": "header-longform-video.php",
-          "name": "header-longform-video.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "fe52e22f": {
           "id": "fe52e22f",
           "path": "related-posts-multimedia.php",
@@ -703,6 +471,19 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "b79a4045": {
+          "id": "b79a4045",
+          "path": "images/thumb-default.png",
+          "output": "images/thumb-default.png",
+          "name": "thumb-default.png",
+          "category": "IMAGE",
+          "size": 3187,
+          "type": "png",
+          "initialSize": 3187,
+          "optimized": false,
+          "height": 300,
+          "width": 740
         }
       },
       "deploymentHistory": {},
