Formato Dossier y otros arreglos

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -484,6 +484,17 @@
           "optimized": false,
           "height": 300,
           "width": 740
+        },
+        "6d282b25": {
+          "id": "6d282b25",
+          "path": "sidebar-dossier.php",
+          "output": "sidebar-dossier.php",
+          "name": "sidebar-dossier.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
