Actualización de desarrollo

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -33,19 +33,6 @@
           "parents": [],
           "type": "php"
         },
-        "94827002": {
-          "id": "94827002",
-          "path": "images/controls.png",
-          "output": "images/controls.png",
-          "name": "controls.png",
-          "category": "IMAGE",
-          "size": 3920,
-          "type": "png",
-          "initialSize": 3920,
-          "optimized": false,
-          "height": 32,
-          "width": 36
-        },
         "e23d9230": {
           "id": "e23d9230",
           "path": "css/base.scss",
@@ -236,8 +223,10 @@
           "cssnext": false,
           "autoprefixer": false,
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "bf6a9ed4"
+          ],
           "type": "css"
         },
         "2346493b": {
@@ -464,6 +453,73 @@
           "optimized": false,
           "height": 14,
           "width": 15
+        },
+        "d5f9a5a8": {
+          "id": "d5f9a5a8",
+          "path": "js/jquery.lockfixed.js",
+          "output": "js/jquery.lockfixed-dist.js",
+          "name": "jquery.lockfixed.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "59b9a7bb": {
+          "id": "59b9a7bb",
+          "path": "images/arrow-left-mobile.png",
+          "output": "images/arrow-left-mobile.png",
+          "name": "arrow-left-mobile.png",
+          "category": "IMAGE",
+          "size": 3835,
+          "type": "png",
+          "initialSize": 3835,
+          "optimized": false,
+          "height": 21,
+          "width": 12
+        },
+        "3fee3dd4": {
+          "id": "3fee3dd4",
+          "path": "images/arrow-left.png",
+          "output": "images/arrow-left.png",
+          "name": "arrow-left.png",
+          "category": "IMAGE",
+          "size": 3787,
+          "type": "png",
+          "initialSize": 3787,
+          "optimized": false,
+          "height": 32,
+          "width": 18
+        },
+        "ae01985f": {
+          "id": "ae01985f",
+          "path": "images/arrow-right-mobile.png",
+          "output": "images/arrow-right-mobile.png",
+          "name": "arrow-right-mobile.png",
+          "category": "IMAGE",
+          "size": 3828,
+          "type": "png",
+          "initialSize": 3828,
+          "optimized": false,
+          "height": 21,
+          "width": 12
+        },
+        "bf9d507d": {
+          "id": "bf9d507d",
+          "path": "images/arrow-right.png",
+          "output": "images/arrow-right.png",
+          "name": "arrow-right.png",
+          "category": "IMAGE",
+          "size": 3791,
+          "type": "png",
+          "initialSize": 3791,
+          "optimized": false,
+          "height": 32,
+          "width": 18
         }
       },
       "deploymentHistory": {},
