Actualización de desarrollo

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -223,10 +223,8 @@
           "cssnext": false,
           "autoprefixer": false,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "bf6a9ed4"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "css"
         },
         "2346493b": {
